--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbString": "Server=IBM-6WN3SB4\\SQLEXPRESS;Database=PantryDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+  }
 }
