Added Authentication and Role based Authorization and Accordingly made changes in PantryItem Controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbString": "Server=IBM-6WN3SB4\\SQLEXPRESS;Database=PantryDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+    "ApplicationDbString": "Server=IBM-6WN3SB4\\SQLEXPRESS;Database=PantryDb;Trusted_Connection=True;TrustServerCertificate=Yes",
+    "AuthDbString": "Server=IBM-6WN3SB4\\SQLEXPRESS;Database=PantryAuthDB;Trusted_Connection=True;TrustServerCertificate=Yes"
+  },
+  "JWT": {
+    "Key": "ThisIsASecretKeyForJWTGeneration123!!",
+    "Issuer": "https://localhost:7050/",
+    "Audience": "https://localhost:7050/"
   }
 }
