--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbString": "Server=IBM-6WN3SB4\\SQLEXPRESS;Database=PantryDb;Trusted_Connection=True;TrustServerCertificate=Yes",
-    "AuthDbString": "Server=IBM-6WN3SB4\\SQLEXPRESS;Database=PantryAuthDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+    "ApplicationDbString": "Server=IBM-FNZ3SB4\\SQLEXPRESS;Database=PantryDb;Trusted_Connection=True;TrustServerCertificate=Yes",
+    "AuthDbString": "Server=IBM-FNZ3SB4\\SQLEXPRESS;Database=PantryAuthDb;Trusted_Connection=True;TrustServerCertificate=Yes"
   },
   "JWT": {
     "Key": "ThisIsASecretKeyForJWTGeneration123!!",
